# HelpdeskEnv

./: .dockerignore  .gitignore  COMPLIANCE_AUDIT.md  JUDGING_AUDIT.md  PITCH.md  README.md  REWARD_DESIGN.md  __init__.py  about.md  baseline_agent.py  client.py  generate_plots.py  generate_training_data.py  generate_training_metrics.py  graders.py  helpdeskenv_class.py  heuristics.py  huggingface_blog.md  inference.py  knowledge_base.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_import.py  test_integration.py  train_grpo.ipynb  train_grpo.py
agents/: __init__.py  l1_agent.py  l2_agent.py  l3_agent.py  triage.py
results/: baseline_results.json  training_metrics.json
server/: app.py  live-dashboard.html
training_data/: helpdesk_eval.jsonl  helpdesk_train.jsonl
