[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helpdeskenv"
version = "2.1.0"
description = "Multi-agent IT helpdesk environment where Triage, L1, L2, and L3 agents collaborate."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Harish Raghav", email = "harishraghav256@gmail.com" }
]
dependencies = [
    "pydantic>=2.6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "openenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Harishraghav-05/helpdesk_env"
Repository = "https://github.com/HR5206/HelpdeskEnv"

[project.scripts]
server = "server.app:main"
helpdeskenv-server = "server.app:main"

[project.entry-points."helpdeskenv.graders"]
helpdesk_triage = "graders:grade_triage"
helpdesk_resolution = "graders:grade_efficiency"
helpdesk_kb_contribution = "graders:grade_kb_contribution"

[tool.pyright]
extraPaths = ["."]
